[gd_scene load_steps=8 format=3 uid="uid://cig2gpf3kuqkq"]

[ext_resource type="Script" path="res://scripts/criar_path/criar_path.gd" id="1_xtxpk"]
[ext_resource type="Material" uid="uid://ddpwqy41qf85d" path="res://shaders/bg_material.tres" id="2_atlsb"]
[ext_resource type="LabelSettings" uid="uid://cgl76j25jy15c" path="res://themes/instructions_label_settings.tres" id="2_jvns2"]

[sub_resource type="Gradient" id="Gradient_mfpkk"]
offsets = PackedFloat32Array(0, 0.201299)
colors = PackedColorArray(0, 0, 0, 0.682353, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_keesj"]
gradient = SubResource("Gradient_mfpkk")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3fof"]
bg_color = Color(1, 0.805, 0.22, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i026o"]
bg_color = Color(1, 0, 0.219608, 1)

[node name="CriarPath" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtxpk")

[node name="GradientBG" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
texture = SubResource("GradientTexture2D_keesj")

[node name="BG" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
material = ExtResource("2_atlsb")
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
color = Color(0, 0, 0, 0.54902)

[node name="InstructionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1890.0
offset_bottom = 268.0
text = "Insira o tamanho da rota e clique nas setas para criar
a rota da nave."
label_settings = ExtResource("2_jvns2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
mouse_filter = 2

[node name="PathButtons" type="HFlowContainer" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 50
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 873.0
offset_right = 1890.0
offset_bottom = 980.0
theme_override_constants/separation = 50
alignment = 1

[node name="VerMapa" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_n3fof")
text = "Ver mapa"

[node name="Ok" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_n3fof")
text = "Ok"

[node name="Cancelar" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_i026o")
text = "Cancelar"

[connection signal="pressed" from="Buttons/VerMapa" to="." method="_on_ver_mapa_pressed"]
[connection signal="pressed" from="Buttons/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Buttons/Cancelar" to="." method="_on_cancelar_pressed"]
